--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ exclude_lines = [
 [tool.ruff]
 target-version = "py38"
 line-length = 88
+unsafe-fixes = true
 ignore = [
     "D203", # 1 blank line required before class docstring
     "D212", # Multi-line docstring summary should start at the first line
