--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ packages = [
 
 [tool.poetry.scripts]
 vr180-convert = "vr180_convert.cli:app"
+v1c = "vr180_convert.cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.9"
