--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ strenum = "^0.4.15"
 python-xmp-toolkit = {version="^2.0.2", optional=true}
 seaborn = "^0.13.2"
 ivy = "^1.0.0.4"
+torch = "^2.6.0"
 
 [tool.poetry.extras]
 xmp = ["python-xmp-toolkit"]
