chore: update deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,12 @@ vr180-convert = "vr180_convert.cli:app"
 v1c = "vr180_convert.cli:app"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10,<3.14"
 rich = ">=10"
 typer = "^0.12.0"
 opencv-python = "^4.9.0.80"
 attrs = "^23.2.0"
-numpy-quaternion = "^2023.0.3"
+numpy-quaternion = "^2024.0.8"
 seaborn = "^0.13.2"
 ivy = "^1.0.0.4"
 torch = "^2.6.0"
