--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ exclude_lines = [
 ]
 
 [tool.ruff]
-target-version = "py38"
+target-version = "py310"
 line-length = 110
 unsafe-fixes = true
 ignore = [
@@ -121,6 +121,7 @@ select = [
     "UP",  # pyupgrade
     "I",   # isort
     "RUF", # ruff specific
+    "TID"
 ]
 
 [tool.ruff.per-file-ignores]
